--- a/Registro/Registro.csproj
+++ b/Registro/Registro.csproj
@@ -82,9 +82,12 @@
     <Content Include="Caltera 2.jpeg" />
     <Content Include="Consultar\ConsultarUsuario.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="Login.aspx" />
     <Content Include="Logo.jpeg" />
     <Content Include="Registro Usuario\Usuario.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consultar\ConsultarUsuario.aspx.cs">
@@ -100,6 +103,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registro Usuario\Usuario.aspx.cs">
