--- a/Registro/Web.config
+++ b/Registro/Web.config
@@ -22,6 +22,20 @@
   </appSettings>
   
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Login.aspx" name=".ASPXFORMSAUTH"></forms>
+    </authentication>
+    
+    <authorization>
+      <deny users="?"/>
+      <allow users="*"/>
+    </authorization>
+    
+  
+  
+    
+      
+      
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
